--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" id="logo" href="#">logo</a>
+            <h1><a class="navbar-brand" id="logo" href="index.html">高雄市展覽活動搜尋</a></h1>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right nav_can">             
