--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 
 <html lang="zh-tw">
   <head lang="zh-tw">
-    <title></title>
+    <title>高雄市展覽活動搜尋</title>
     <meta charset="UTF-8">
-    <meta content="高雄市政府,活動">
+    <meta content="高雄市政府,展覽,藝術">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+      <meta property="og:type" content="website" />
+    <meta property="og:title" content="高雄市展覽活動搜尋" />
+    <meta property="og:description" content="高雄市政府資料開放平台-高雄市政府文化局-展覽活動" />
+    <meta property="og:url" content="http://iamcandice.github.io/Kaohsiung-Exhibition/" />
+    <meta property="og:site_name" content="高雄市展覽活動搜尋" />
+
 
        
     <link rel=stylesheet type="text/css" href="assets/bootstrap/css/bootstrap.css"> 
